# gear-go

./: .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  demo_messenger.opt.wasm  docker-compose.yml  gear.go  gear_test.go  go.mod  go.sum  golangci.yaml  subscriptions.go
.github/.workflows/: main.yml
.github/workflows/: main.yml
cmd/: gear-go.go
cmd/generate-rust-grpc/: generate-rust-grpc.go
cmd/remove-rust/: remove-rust.go
cmd/remove-target/: remove-target.go
cmd/root/: root.go
cmd/serve/: serve.go
cmd/storage-subscribe/: storage-subscribe.go
config/: init.go  scheme.go
example/: README.md
example/balances/: README.md  transfer_keep_alive.go
example/code/: example_upload_code_and_get_code_from_storage.go
example/rust-grpc-scale/: README.md  rust-codec.go
example/storage/: README.md  get_account_value.go
example/voucher/: example_voucher_send_msg.go
internal/api/: gear-api.go  metadata.go  sign-transaction.go  sign-transaction_test.go
internal/calls/: calls.go  gear-calls.go  sign-transaction.go  sign-transaction_test.go
internal/client/: client.go
internal/events/: events.go  events_test.go  system.go
internal/gear-grpc/: gear-grpc.go
internal/metadata/: metadata.go  metadata_test.go
internal/models/: errors.go  events.go  grpc-models.go  request.go  (+4 more)
lib/programs/ping/: Cargo.toml
lib/programs/ping/src/: wasm.rs
lib/server_grpc/: .gitignore  Cargo.toml  build.rs
lib/server_grpc/proto/: gear-grpc.pb.go  gear-grpc.proto  gear-grpc_grpc.pb.go
lib/server_grpc/src/: .gitignore  server.rs  sign_transaction.rs
(+58 files in other folders)
