[package]
name = "demo_ping"
version = "0.1.0"
edition = "2024"
authors = ["Gear Technologies"]

[dependencies]
gstd = "*"
scale-info = { version = "=2.11", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "=3.7.5", default-features = false, features = ["derive", "full"] }
primitive-types = { version = "0.12.2", default-features = false }

[build-dependencies]
gear-wasm-builder = "*"
